@@ -7,10 +7,10 @@ public class addRegCitizen {
         // When adding regular citizens to the group, increment shared variable count
         sharedVar.count++;
         // add super citizen to group
-        System.out.println("Regular Citizen " + regCitQueue.getFirst() + "is signing up");
+        System.out.println("Regular Citizen " + regCitQueue.get(0) + " is signing up");
         // output
-        System.out.println("Regular Citizen" + regCitQueue.getFirst() + "has joined team" + sharedVar.currentGroupNo);
-        regCitQueue.removeFirst();
+        System.out.println("Regular Citizen " + regCitQueue.get(0) + " has joined team " + sharedVar.currentGroupNo);
+        regCitQueue.remove(0);
         // increment number of members
         sharedVar.regCitizensGroupCount++;
         sharedVar.memberCount++;
