@@ -6,11 +6,11 @@ public class addSuperCitizen {
                 // When adding super citizens to the group, decrement shared variable count
                 sharedVar.count--;
                 // add super citizen to group
-                System.out.println("Super Citizen " + superCitQueue.getFirst() + " is signing up");
+                System.out.println("Super Citizen " + superCitQueue.get(0) + " is signing up");
                 // output
-                System.out.println("Super Citizen " + superCitQueue.getFirst() +
+                System.out.println("Super Citizen " + superCitQueue.get(0) +
                         " has joined team " + sharedVar.currentGroupNo);
-                superCitQueue.removeFirst();
+                superCitQueue.remove(0);
                 // increment number of members
                 sharedVar.superCitizensGroupCount++;
                 sharedVar.memberCount++;
